Update gradle and fix warnings